Splash screnn updated

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="ligth_black">#111214</color>
     <color name="light_white">#969696</color>
+    <color name="green">#00773E</color>
 </resources>
