OnBoarding Ui updated

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="ligth_black">#111214</color>
     <color name="light_white">#969696</color>
     <color name="green">#00773E</color>
+    <color name="blue">#276EE0</color>
 </resources>
