--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -37,6 +37,7 @@
         app:layout_constraintVertical_bias="0.247" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_margin="20dp"
