Updated ui of Company details

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="blue">#276EE0</color>
     <color name="light_grey1">#212324</color>
     <color name="grey">#616161</color>
+    <color name="dark_blue">#232845</color>
 </resources>
